[package]
name = "hs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Included per requirements; not used directly in this demo path.
hotstuff_rs = "0.4"

[profile.release]
opt-level = 3

